# universa

./: .env.example  .gitignore  README.md  openapi.yaml  package.json
agent-toolkit/: LICENSE  README.md  package.json
agent-toolkit/examples/: create-va-dry-run.mjs
agent-toolkit/scripts/: smoke-agent-toolkit.mjs
agent-toolkit/src/: client.mjs  index.mjs  mcp-server.mjs  tools.mjs
contracts/kyc-token-vault/: Anchor.toml  Cargo.toml  README.md  campaign.example.json  package-lock.json  package.json  tsconfig.json
contracts/kyc-token-vault/programs/kyc-token-vault/: Cargo.toml
contracts/kyc-token-vault/programs/kyc-token-vault/src/: lib.rs
docs/: developer-rewards.md  meteora-dbc-launch.md  production-readiness.md  settlement-ledger.md  webhooks.md
launch/meteora-dbc/: package-lock.json  package.json
public/: 404.html  _headers  _redirects  _worker.js  app.js  dashboard.html  index.html  privacy.html  styles.css  terms.html
public/dashboard/: index.html
scripts/: settlement-batch.mjs  smoke-negative.mjs  smoke-test.mjs
scripts/universa-token/: README.md  claim-and-swap-fees-relay.mjs  claim-damm-fees-transfer-usdc.mjs  create-jupiter-team-lock.mjs  fund-vault-from-dbc-leftover.mjs  launch-dbc.mjs  package-lock.json  package.json
supabase/: config.toml
supabase/migrations/: 202606080001_platform_core.sql  202606080002_fee_layers.sql  202606080003_developer_rewards.sql  202606090001_dashboard_access.sql  202606100001_remote_history_placeholder.sql  202606100001_rename_platform_fee_columns_to_universa.sql  202606100003_reward_verification_gate.sql  (+8 more)
(+21 files in other folders)
