[package]
name = "kyc-token-vault"
version = "0.1.0"
description = "Immutable Universa developer rewards token vault"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kyc_token_vault"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
anchor-spl = "1.0.2"
